--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Skyteam PTFS</title>
+  <link rel="stylesheet" href="css/index_style.css">
+</head>
+<body>
+  
+  <div class="sidebar">
+    <h2>Skyteam PTFS</h2>
+    <button>Home</button>
+    <button>About</button>
+    <button>Services</button>
+    <button>Contact</button>
+  </div>
+
+  <div class="content">
+    <h1>Main Content</h1>
+    <p>This is the main content area. It can contain various elements.</p>
+  </div>
+  
+</body>
+</html>
