--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Skyteam PTFS</title>
-  <link rel="stylesheet" href="css/index_style.css">
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-  
-  <div class="sidebar">
-    <h2>Skyteam PTFS</h2>
-    <button>Home</button>
-    <button>About</button>
-    <button>Services</button>
-    <button>Contact</button>
-  </div>
 
-  <div class="content">
-    <h1>Main Content</h1>
-    <p>This is the main content area. It can contain various elements.</p>
+<div class="container mt-3">
+  <h3>The SkyTeam Management</h3>
+  <button type="button" class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#myModal">
+    View Staff Team
+  </button>
+</div>
+
+<!-- The Modal -->
+<div class="modal fade" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Wrong Move</h4>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        <p>
+          This part of website does not exist <span class="badge bg-danger">Bug No. 9</span>
+        </p>
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" onclick="location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ';"">Close</button>
+      </div>
+
+    </div>
   </div>
-  
+</div>
+
+
 </body>
 </html>
